src/test/deca/context/invalid/extension/double-declaration-tab.deca
// Programme déclarant 2 fois le même tableau

{
    int[2] tab;
    int[3] tab;
}